objects/GRP_CC_CollectBQ__c.object
<CustomObject>
    <description>GRP_CC Connected Customer Application Object</description>
    <fields>
        <fullName>GRP_CC_BrandQuality__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>BrandQuality</label>
        <referenceTo>CORE_BrandQuality__c</referenceTo>
        <relationshipLabel>CollectBQ</relationshipLabel>
        <relationshipName>CollectBQ</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GRP_CC_Collect__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Collect</label>
        <referenceTo>GRP_CC_Collect__c</referenceTo>
        <relationshipLabel>CollectBQ</relationshipLabel>
        <relationshipName>CollectBQ</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GRP_CC_IsBackBar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBackBar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GRP_CC_IsOnMenu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOnMenu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GRP_CC_IsPouring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPouring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GRP_CC_IsPremium__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPremium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GRP_CC_IsSuperPremium__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSuperPremium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GRP_CC_No_volume__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if there are no volume associated to this Brand Quality</description>
        <label>No volume</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GRP_CC_Unknown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if the Chain Account Responsible don&apos;t known how the Brand Quality is used</description>
        <label>Unknown</label>
        <type>Checkbox</type>
    </fields>
    <label>Collect BQ</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Coll-{0000000000}</displayFormat>
        <label>CollectBQ Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CollectBQ</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>